# fontfor

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  bors.toml  clippy.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: action-audit.yml  action-build.yml  action-depver.yml  action-lint.yml  build.yml  ci.yml  daily.yml  depver.yml  publish.yml  release.yml  security_audit.yml
.github/workflows/common/: audit.yml  build.yml  lint.yaml
src/: args.rs  family.rs  font.rs  font_info.rs  main.rs  one_char.rs
src/fc/: charset.rs  consts.rs  font.rs  font_info.rs  font_set.rs  mod.rs  object_set.rs  pattern.rs
src/font/: from_ct.rs  from_fc.rs  mod.rs
src/font/matcher/: mod.rs
src/font/matcher/ct/: charset.rs  font_descriptor.rs  font_info.rs  font_set.rs  mod.rs
src/font/matcher/fc/: charset.rs  consts.rs  font_info.rs  font_set.rs  mod.rs
src/font/render/: mod.rs
src/font_matcher/: mod.rs
src/font_matcher/ct/: descriptor.rs
src/font_matcher/fc/: font_info.rs
src/ft/: bitmap.rs  font_face.rs  library.rs  mod.rs
src/loader/: charset.rs  cmap.rs  error.rs  face_info.rs  font_info.rs  font_set.rs  mod.rs  pattern.rs
src/preview/: mod.rs
src/preview/browser/: builder.rs  mod.rs  server.rs
src/preview/browser/statics/: preview_block_template.html  script.js  style.css  template.html
src/preview/server/: mod.rs  static_page_server.rs
src/preview/server/statics/: preview_block_template.html  style.css
src/preview/terminal/: mod.rs
src/preview/terminal/render/: ascii.rs  mod.rs  mono.rs  moon.rs
src/preview/terminal/ui/: cache.rs  canvas_render.rs  event.rs  mod.rs  state.rs
src/rasterizer/: bitmap.rs  font_face.rs  mod.rs
