[package]
name = "fontfor"
version = "0.4.1-alpha1"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "find fonts which can show a specified character and preview them in terminal or browser"
homepage = "https://github.com/7sDream/fontfor"
repository = "https://github.com/7sDream/fontfor"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["font", "character", "cli", "utilities"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[dependencies]
# Global values
once_cell = "1"

# Define error type
thiserror = "1"

# 2D array
grid = "0.11"

# CLI argument parser
clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }

# Font loader
fontdb = "0.16"

# Font parser
ttf-parser = "0.20"

# Font rasterizer
# see https://gist.github.com/7sDream/0bb194be42b8cb1f1926ca12151c8d76 for alternatives.
ab_glyph = "0.2"

# Termianal UI
ratatui = "0.24"

# Terminal events
crossterm = "0.27"

# Home-made singel thread HTTP server for preview fonts in browser.
# Alternative: output a html file into temp dir and open it
httparse = "1"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
