[package]
name = "fontfor"
version = "0.4.4-alpha.1"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "find fonts which can show a specified character and preview them in terminal or browser"
homepage = "https://github.com/7sDream/fontfor"
repository = "https://github.com/7sDream/fontfor"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["font", "character", "cli", "utilities"]
categories = ["command-line-utilities", "text-processing", "visualization"]

[dependencies]
# Global values
once_cell = "1.0"

# Define error type
thiserror = "1.0"

# 2D array
grid = "0.13"

# CLI argument parser
clap = { version = "4.4", features = ["derive", "unicode", "wrap_help"] }

# Font loader
fontdb = "0.16"

# Font parser
ttf-parser = "0.21"

# Filter fonts
range-set-blaze = "0.1.16"

# Font rasterizer
# see https://gist.github.com/7sDream/0bb194be42b8cb1f1926ca12151c8d76 for alternatives.
ab_glyph = "0.2"

# Termianal UI
ratatui = "0.26"

# Terminal events
crossterm = "0.27"

# Input widget for filter in TUI
tui-input = "0.8.0"

# Home-made single thread HTTP server for preview fonts in browser.
# Alternative: output a html file into temp dir and open it
httparse = "1.8"

# Logger
log = { version = "0.4", features = ["release_max_level_off"] }
env_logger = { version = "0.11", optional = true }

[features]
default = []
log-output = ["dep:env_logger"]

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
